src/main/java/com/example/stream/spring/courses/reactive/example/model/error/InstructorSuccess.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface InstructorSuccess extends Success permits InstructorDeleteOk {
}
